# rsutone

./: .gitignore  Cargo.toml  Rocket.toml  database.sqlite
scripts/: database.sql  reports.query  seeds.sql
src/: -- SQLite  domain.rs  main.rs
templates/: base.html.tera  index.html.tera  metrics.html.tera  reports.html.tera
